# Nutritions_AI

./: .gitignore  README.md  nutrition_agent.py  pyproject.toml
Nutrition_Proj/: agent_factory.py  app.py  config.py  db.py  guardrails.py  main.py  mcp_config.py  slides_tool.py
Nutrition_Proj/chroma/: chroma.sqlite3
