[project]
name = "breakfast-planner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agents>=1.4.0",
    "chromadb>=1.5.9",
    "exa-py>=2.13.0",
    "langsmith>=0.8.5",
    "mcp>=1.27.1",
    "openai-agents>=0.17.3",
    "streamlit>=1.57.0",
]
